[package]
name = "rdns"
version = "0.1.0"
edition = "2021"
authors = ["Joe Banks <joe@jb3.dev>"]
description = "Utilities for working with reverse DNS."
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
trust-dns-client = "0.20.3"
colored = "2.0.0"
ipnetwork = "0.18.0"
dialoguer = "0.8.0"
num-format = "0.4.0"
num-bigint = "0.4.3"
rayon = "1.3.1"
